fix(font): more readable font

--- a/frontend/pages/article/styles.module.scss
+++ b/frontend/pages/article/styles.module.scss
@@ -3,7 +3,7 @@
 .Article {
   p {
     font-size: 20px;
-    line-height: 1.33em;
+    line-height: 1.5em;
   }
 
   @include _480 {
