--- a/frontend/shared/styles/style.scss
+++ b/frontend/shared/styles/style.scss
@@ -17,8 +17,9 @@ a {
 
 body {
   background-color: $color-dark;
-  color: #FFFFFFCC;
+  color: #747d87;
   font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
 
 #category {
